--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -9,44 +9,40 @@ jobs:
     name: Static Validation
     runs-on: ubuntu-latest
     steps:
+      - name: DateAndTimeStamps
+        id: stamps
+        run: |
+          set -euo pipefail
+          timestamp=$(date +'%Y%m%dT%H%M%S')
+          datestamp=$(date +'%Y%m%d')
+          echo "TIMESTAMP=${timestamp}" | tee -a "$GITHUB_OUTPUT"
+          echo "DATESTAMP=${datestamp}" | tee -a "$GITHUB_OUTPUT"
       - uses: actions/checkout@v4
       - name: Tool cache
         uses: actions/cache@v4
         with:
           path: |
             ${{ runner.temp }}/bin
-          key: ${{ runner.os }}-usr-local-bin
+          key: ${{ runner.os }}-tools-${{ hashFiles('ci-tools/install-tools.sh') }}
+          restore-keys: |
+            ${{ runner.os }}-tools-
       - name: Install tools
         run: |
           set -euo pipefail
-          mkdir -p ${{ runner.temp }}/bin
-          pushd ${{ runner.temp }}/bin
-          if ! [ -f ./eget ]; then
-            $GITHUB_WORKSPACE/ci-tools/eget.sh
-          fi
-          if ! [ -f ./kubeconform ]; then
-            ./eget --upgrade-only yannh/kubeconform
-          fi
-          if ! [ -f ./tk ]; then
-            ./eget --upgrade-only grafana/tanka
-            mv tanka tk
-          fi
-          if ! [ -f ./jb ]; then
-            ./eget --upgrade-only jsonnet-bundler/jsonnet-bundler
-            mv jsonnet-bundler jb
-          fi
-          if ! [ -f ./helm ]; then
-            ./eget --upgrade-only https://get.helm.sh/helm-v3.18.2-linux-amd64.tar.gz --file helm
-          fi
-          popd
+          export TOOLDIR=${{ runner.temp }}/bin
+          export GET_EGET=$GITHUB_WORKSPACE/ci-tools/eget.sh
+          $GITHUB_WORKSPACE/ci-tools/install-tools.sh
       - name: Find modules
         id: modules
         run: |
           set -euo pipefail
+          # Locate Helm and Tanka configs for validation
           charts=($(find "${{ github.workspace }}" -name Chart.yaml -exec dirname {} \;))
           echo "CHARTS=${charts[*]}" | tee -a "$GITHUB_OUTPUT"
           tanka=($(find "${{ github.workspace }}" -name jsonnetfile.json -exec dirname {} \;))
           echo "TANKA=${tanka[*]}" | tee -a "$GITHUB_OUTPUT"
+
+          # Cache vendor directories
           for c in "${!charts[@]}"; do
               charts[c]="${charts[c]}/charts"
           done
@@ -65,12 +61,17 @@ jobs:
         with:
           path: |
             ${{ runner.temp }}/cache/kubeconform
-          key: ${{ runner.os }}-kubeconform
+          key: ${{ runner.os }}-kubeconform-${{ steps.stamps.outputs.TIMESTAMP }}
+          restore-keys: |
+            ${{ runner.os }}-kubeconform-${{ steps.stamps.outputs.DATESTAMP }}
+            ${{ runner.os }}-kubeconform-
       - name: Deps cache
         uses: actions/cache@v4
         with:
           path: ${{ steps.modules.outputs.CACHE_DIRS }}
-          key: ${{ runner.os }}-deps
+          key: ${{ runner.os }}-deps-${{ hashFiles('**/Chart.lock', '**/jsonnetfile.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-deps-
       - name: Check Tanka
         run: |
           set -euxo pipefail
