--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -37,9 +37,9 @@ jobs:
         run: |
           set -euo pipefail
           # Locate Helm and Tanka configs for validation
-          charts=("$(find '${{ github.workspace }}' -name Chart.yaml -exec dirname {} \;)")
+          charts=($(find "${{ github.workspace }}" -name Chart.yaml -exec dirname {} \;))
           echo "CHARTS=${charts[*]}" | tee -a "$GITHUB_OUTPUT"
-          tanka=("$(find '${{ github.workspace }}' -name jsonnetfile.json -exec dirname {} \;)")
+          tanka=($(find "${{ github.workspace }}" -name jsonnetfile.json -exec dirname {} \;))
           echo "TANKA=${tanka[*]}" | tee -a "$GITHUB_OUTPUT"
 
           # Cache vendor directories
